# cli-rust

./: Cargo.toml  README.md
src/: main.rs
src/commands/: ls.rs
